--- a/examples/package.json
+++ b/examples/package.json
@@ -19,23 +19,28 @@
     "axios": "^0.16.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-redux": "^5.0.4",
+    "react-redux": "^5.0.6",
     "react-redux-typescript": "^2.3.0",
-    "redux": "^3.7.1",
-    "redux-observable": "^0.14.1",
+    "react-router-dom": "^4.1.2",
+    "react-router-redux": "next",
+    "redux": "^3.7.2",
+    "redux-observable": "^0.16.0",
     "reselect": "^3.0.1",
-    "rxjs": "^5.4.2",
+    "rxjs": "^5.4.3",
     "tslib": "^1.7.0",
+    "typical": "tycho01/typical#4500981c6e1b13e4f489154424a7142897ae167f",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
-    "@types/node": "^8.0.7",
-    "@types/react": "^15.0.34",
-    "@types/react-dom": "^15.5.1",
-    "@types/react-redux": "^4.4.45",
-    "@types/uuid": "^3.0.0",
-    "tslint": "^5.4.3",
-    "tslint-react": "^3.0.0",
-    "typescript": "^2.3.4"
+    "@types/node": "^8.0.24",
+    "@types/react": "^16.0.2",
+    "@types/react-dom": "^15.5.3",
+    "@types/react-redux": "^5.0.4",
+    "@types/react-router-dom": "^4.0.7",
+    "@types/react-router-redux": "^5.0.6",
+    "@types/uuid": "^3.4.0",
+    "tslint": "^5.6.0",
+    "tslint-react": "^3.2.0",
+    "typescript": "2.5.0"
   }
 }
