--- a/playground/package.json
+++ b/playground/package.json
@@ -33,7 +33,7 @@
     "rxjs": "5.5.6",
     "tslib": "1.8.1",
     "typesafe-actions": "1.1.2",
-    "utility-types": "1.0.0-rc.2",
+    "utility-types": "1.0.0",
     "uuid": "3.1.0"
   },
   "devDependencies": {
