--- a/playground/package.json
+++ b/playground/package.json
@@ -31,7 +31,7 @@
     "react-router-dom": "4.3.1",
     "react-router-redux": "5.0.0-alpha.8",
     "redux": "4.0.1",
-    "redux-observable": "1.0.0-alpha.2",
+    "redux-observable": "1.0.0",
     "reselect": "3.0.1",
     "rxjs": "6.4.0",
     "rxjs-compat": "6.4.0",
