Replace deprecated module in playground
Replace 'react-router-redux' with 'connected-react-router'

--- a/playground/package.json
+++ b/playground/package.json
@@ -27,8 +27,8 @@
     "@types/react-dom": "16.8.4",
     "@types/react-redux": "7.0.8",
     "@types/react-router-dom": "4.3.2",
-    "@types/react-router-redux": "5.0.18",
     "axios": "0.18.0",
+    "connected-react-router": "6.5.0",
     "cuid": "2.1.6",
     "prop-types": "15.7.2",
     "react": "16.8.6",
